# ChangeLog for squash_dir

*squash_dir-11.7
	Martin Väth <martin at mvath.de>:
	- Simplify quoting

*squash_dir-11.6
	Martin Väth <martin at mvath.de>:
	- Fix statusline logic

*squash_dir-11.5
	Martin Väth <martin at mvath.de>:
	- Simplify quoting

*squash_dir-11.4
	Martin Väth <martin at mvath.de>:
	- Support also soft status line (screen). Change status line option.

*squash_dir-11.3
	Martin Väth <martin at mvath.de>:
	- Fix treatment of sh -c: -c does not take an argument

*squash_dir-11.2
	Martin Väth <martin at mvath.de>:
	- Improve error output in some cases

*squash_dir-11.1
	Martin Väth <martin at mvath.de>:
	- squash_dir script: Follow order of command line without new option -a
	- squash_dir script: Improve alignment of output

*squash_dir-11.0
	Martin Väth <martin at mvath.de>:
	- Provide COMPRESSION and default to xz.
	- Use extra_commands instead of opts.
	- Provide description (also of extra_commands) in the init-file.

*squash_dir-10.21
	Martin Väth <martin at mvath.de>:
	- Add support for titlebar display

*squash_dir-10.20
	Martin Väth <martin at mvath.de>:
	- Minor improvements in zsh completion

*squash_dir-10.19
	Martin Väth <martin at mvath.de>:
	- Minor fixes in zsh completion and configure.ac

*squash_dir-10.18
	Martin Väth <martin at mvath.de>:
	- Output clearing/killing only if really something gets removed
	- Allow masks instead of names in the squash_dir wrapper script
	- Improve zsh-completion and make squash_dir shortcuts more consistent

*squash_dir-10.17
	Martin Väth <martin at mvath.de>:
	- Improve zsh-completion

*squash_dir-10.16
	Martin Väth <martin at mvath.de>:
	- Provide zsh-completion

*squash_dir-10.15
	Martin Väth <martin at mvath.de>:
	- No longer default to -i for MOUNT_AUFS (aufs2-util appears now safe).

*squash_dir-10.14
	Martin Väth <martin at mvath.de>:
	- Introduce KILL_FILE.
	- Introduce option -k to the squash_dir wrapper script
	- Introduce MOUNT_AUFS_OPTS.

*squash_dir-10.13
	Martin Väth <martin at mvath.de>: