@@ -1,6 +1,6 @@
 # (C) Martin V\"ath <martin@mvath.de>
 
-AC_INIT([squash_dir], [11.7])
+AC_INIT([squash_dir], [11.8])
 AC_PREREQ([2.64])
 AC_CONFIG_AUX_DIR([config])
 AC_CONFIG_FILES([Makefile])
@@ -15,7 +15,7 @@ AC_ARG_WITH([zsh-completion],
 	[AS_HELP_STRING([--with-zsh-completion=STR],
 		[install zsh-completion file in directory STR])],
 	[AS_CASE([${withval}],
-		['/'*], [AS_VAR_SET([ZSH_COMPLETION], ["${withval}"])],
+		[/*], [AS_VAR_SET([ZSH_COMPLETION], ["${withval}"])],
 		[no], [AS_VAR_SET([ZSH_COMPLETION], [])])])
 AS_VAR_IF([ZSH_COMPLETION], [],
 		[AC_MSG_RESULT([no])],
